--- a/css/block/ucb-mega-menu.css
+++ b/css/block/ucb-mega-menu.css
@@ -31,7 +31,7 @@
 }
 .ucb-mega-menu {
     position: absolute;
-    border: black solid 1px;
+    box-shadow: 0 2px 5px rgba(0 0 0 /10%);
     z-index: 9;
     background: #fff;
 }
