Block styles: Hero style font-family

--- a/css/block/block-styles.css
+++ b/css/block/block-styles.css
@@ -5,6 +5,7 @@
 
 .block-title.hero, .block-title.supersize {
   font-weight: normal;
+  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif; ;
 }
 
 .block-title.strong, .block-title.bold {
