--- a/templates/navigation/menu--extras.html.twig
+++ b/templates/navigation/menu--extras.html.twig
@@ -38,37 +38,32 @@
           item.in_active_trail ? 'active',
           item.is_unpublished ? 'unpublished'
         ] %}
-
-                <li{{item.attributes.addClass(classes)}}>
-
-                    {% if item.title|upper == 'HOME' %}
-                        <a{{create_attribute({href:item.url|render,class:'ucb-home-button nav-link',title:item.title})}}>
-                            <i class="fa-solid fa-home"></i>
-                            <span class="visually-hidden">{{ item.title }}</span>
-                        </a>
+            <li{{item.attributes.addClass(classes)}}>
+                {% if item.title|upper == 'HOME' %}
+                    <a{{create_attribute({href:item.url|render,class:'ucb-home-button nav-link',title:item.title})}}>
+                        <i class="fa-solid fa-home"></i>
+                        <span class="visually-hidden">{{ item.title }}</span>
+                    </a>
+                {% else %}
+                    {% set title = item.is_unpublished ? {
+                     '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="visually-hidden">(Unpublished)</span>'
+                    } : item.title %}
+                    {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
+                        {% set linkURL =  "megaMenuClicked('" ~ title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value ~ "')" %}
+                        <a href="#" title='{{title}}' class="nav-link ucb-mega-menu-outer-link" onclick = "megaMenuClicked('{{title|lower|trim|replace({' ': ''})}}{{item.content.field_mega_menu_select.0['#block_content'].id.value}}')">{{title}} <i class="fa fa-angle-down ucb-mega-menu-icon" aria-hidden="true"></i></a>
                     {% else %}
-
-                        {% set title = item.is_unpublished ? {
-                '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="visually-hidden">(Unpublished)</span>'
-              } : item.title %}
-                        {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
-                          <li class="menu-item">
-                            <a href="#" title='{{title}}' class="nav-link ucb-mega-menu-outer-link" onclick = "megaMenuClicked('{{title|lower|trim|replace({' ': ''})}}{{item.content.field_mega_menu_select.0['#block_content'].id.value}}')">{{title}} <i class="fa fa-angle-down ucb-mega-menu-icon" aria-hidden="true"></i></a>
-                          </li>
-                        {% else %}
-                          {{ link(title, item.url, create_attribute({ class: 'nav-link' })) }}
-                          {% if item.below %}
-                              {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
-                          {% endif %}
+                        {{ link(title, item.url, create_attribute({ class: 'nav-link' })) }}
+                        {% if item.below %}
+                            {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
                         {% endif %}
                     {% endif %}
+                {% endif %}
                 </li>
             {% endfor %}
         </ul>
             <div class = "ucb-mega-menu container">
             {% for item in items %}
                         {% if item.content.field_display_mega_menu|render|striptags|trim == "On" %}
-
                             <div class="ucb-mega-menu-wrapper block-{{item.title|lower|trim|replace({' ': ''}) ~ item.content.field_mega_menu_select.0['#block_content'].id.value}} collapse">
                                 <h2 class="ucb-mega-menu-header"><a href = "{{item.url}}" class = "ucb-mega-menu-heading-link">{{item.content.field_mega_menu_select.0['#block_content'].field_mega_menu_heading.value }}</a></h2>
                                 <div class="ucb-mega-menu-column-wrapper">
