--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -386,3 +386,7 @@ width: fit-content;
 .ucb-button-gray .icon-bg .svg-inline--fa {
   vertical-align: middle;
 }
+
+.ucb-mega-menu-outer-link {
+  cursor: pointer;
+}
