--- a/css/style.css
+++ b/css/style.css
@@ -1128,7 +1128,7 @@ a.tabledrag-handle .handle {
   margin: -0.25em 0.5em;
 }
 
-h1.clear-margin,h2.clear-margin,h3.clear-margin,h4.clear-margin,h5.clear-margin,h6.clear-margin,p.clear-margin{
+h2.clear-margin,h3.clear-margin,h4.clear-margin,h5.clear-margin,h6.clear-margin,p.clear-margin{
   margin-bottom: 0 !important;
 }
 
