--- a/css/block/ucb-mega-menu.css
+++ b/css/block/ucb-mega-menu.css
@@ -1,6 +1,3 @@
-.ucb-mega-menu-column-wrapper {
-    display: flex;
-}
 .ucb-mega-menu-column-links-wrapper {
     display: block;
     padding: 0;
@@ -14,12 +11,6 @@
     list-style-type: none;
 }
 
-.ucb-mega-menu-text-above {
-    flex-grow: 1;
-}
-.ucb-mega-menu-column {
-    flex-grow: 1;
-}
 .ucb-mega-menu-column-links-wrapper a {
     display: block;
 }
@@ -34,4 +25,60 @@
     box-shadow: 0 2px 5px rgba(0 0 0 /10%);
     z-index: 9;
     background: #fff;
+}
+
+.ucb-mega-menu-outer-link {
+    cursor: pointer;
+}
+
+.ucb-mega-menu-column-3 div {
+    min-width: 33%;
+    width: 33%;
+    max-width: 33%;
+}
+
+.ucb-mega-menu-column-4 div {
+    min-width: 25%;
+    width: 25%;
+    max-width: 25%;
+}
+
+.ucb-mega-menu-column-5 div {
+    min-width: 20%;
+    width: 20%;
+    max-width: 20%;
+}
+
+.ucb-mega-menu-column-6 div {
+    min-width: 16%;
+    width: 16%;
+    max-width: 16%;
+}
+
+.ucb-mega-menu-wrapper {
+    padding: 20px;
+}
+.ucb-mega-menu-column-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+@media only screen and (max-width:576px) {
+    .ucb-mega-menu-column-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .ucb-mega-menu-column-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    .ucb-mega-menu-column-3 div,
+    .ucb-mega-menu-column-4 div,
+    .ucb-mega-menu-column-5 div,
+    .ucb-mega-menu-column-6 div {
+        min-width: 100%;
+        width: 100%;
+        max-width: 100%;
+    }
+
 }
