print image changes

--- a/css/ucb-print.css
+++ b/css/ucb-print.css
@@ -11,11 +11,13 @@ body {
 
 /* BRANDING */
 
-.ucb-logo img {
-  display: block;
-  width: 240px;
-  height: auto;
+.brand-bar .ucb-brand-bar img.ucb-logo {
+  padding-left: 200px;
+  width: 200px !important;
+  max-width: 200px !important;
+  height: 20px !important;
   margin-bottom: 1em;
+  background: url(https://cdn.colorado.edu/static/brand-assets/live/images/cu-boulder-logo-text-black.svg) no-repeat;
 }
 .site-name {
   display: none;
