region styles fix

--- a/css/ucb-print.css
+++ b/css/ucb-print.css
@@ -35,7 +35,11 @@ body {
 .ucb-site-information-print-title{
   color: #000 !important;
 }
-.block-hero-unit .block-title-text {
+.block-title-text {
+  color: #000 !important;
+
+}
+.ucb-bootstrap-layout-section {
   color: #000 !important;
 
 }
